@@ -5,7 +5,7 @@
 #
 #	Make prototype
 #
-#	System utilities used: cat, dirname, grep, rm, sort
+#	System utilities used: cat, dirname, grep, mkdir, rm, sed, sort, tr
 #
 LANG=C export LANG
 DIR_BIN=@BIN@
@@ -17,6 +17,14 @@ DIR_SPOOL=@SPOOL@
 DIR_FONTS=@AFMDIR@
 DIR_CGI=@CGIDIR@
 DIR_HTML=@HTMLDIR@
+DIR_SYSVINIT=@SYSVINITDIR@
+DIR_SYSVINITSTART="@SYSVINITDIR@/@SYSVINITSTARTDIR@"
+DIR_SYSVINITSTOP="@SYSVINITDIR@/@SYSVINITSTOPDIR@"
+MANNUM1_8=@MANNUM1_8@
+MANNUM4_5=@MANNUM4_5@
+LMANNUM1_8=`echo ${MANNUM1_8} | tr '[A-Z]' '[a-z]'`
+LMANNUM4_5=`echo ${MANNUM4_5} | tr '[A-Z]' '[a-z]'`
+TMP_DIR=/tmp/.$$hylafax
 TMP_LIST=$$tmp
 LIST="${DIR_BIN} ${DIR_LIB} ${DIR_SLIB} ${DIR_MAN} ${DIR_SBIN}"
 
@@ -27,6 +35,13 @@ case $1 in
 	server)	PROTOTYPE=sproto
 		LIST="${LIST} ${DIR_SPOOL}"
 		DO_HTML="@HTML@"
+		[ -d ${TMP_DIR} ]  &&  {
+			rm -fr ${TMP_DIR}  ||  {
+				echo "rm -fr ${TMP_DIR} failed"
+				exit 1
+			}
+		}
+		(umask 077 ; mkdir ${TMP_DIR})
 			;;
 	*)	echo "usage: $0 server or client"
 		exit 1 ;;
@@ -74,6 +89,56 @@ then
 	done
 fi
 
+if [ ${PROTOTYPE} = sproto ]
+then
+	for i in ${DIR_SYSVINITSTART}
+	do
+		case ${i} in
+			/*)	;;
+			*)	i=${DIR_SYSVINIT}/${i} ;;
+		esac
+		mkdir -p ${TMP_DIR}/${i}
+		i=`(cd ${TMP_DIR}/${i} ; pwd) | sed "s~${TMP_DIR}~~"`
+		rm -fr ${TMP_DIR}/*
+		echo "s none ${i}/@SYSVINITSTARTNAME@=@SYSVINITDIR@/hylafax" >> ${TMP_LIST}
+		while [ ${i} != / ]
+		do
+			echo "d none ${i} ? ? ?" >> ${TMP_LIST}
+			i=`dirname ${i}`
+		done
+	done
+	for i in ${DIR_SYSVINITSTOP}
+	do
+		case ${i} in
+			/*)	;;
+			*)	i=${DIR_SYSVINIT}/${i} ;;
+		esac
+		mkdir -p ${TMP_DIR}/${i}
+		i=`(cd ${TMP_DIR}/${i} ; pwd) | sed "s~${TMP_DIR}~~"`
+		rm -fr ${TMP_DIR}/*
+		echo "s none ${i}/@SYSVINITSTOPNAME@=@SYSVINITDIR@/hylafax" >> ${TMP_LIST}
+		while [ ${i} != / ]
+		do
+			echo "d none ${i} ? ? ?" >> ${TMP_LIST}
+			i=`dirname ${i}`
+		done
+	done
+	rm -fr ${TMP_DIR}
+
+	echo "f none ${DIR_SYSVINIT}/hylafax=../etc/hylafax 0755 @SYSUID@ @SYSGID@" >> ${TMP_LIST}
+	while [ ${DIR_SYSVINIT} != / ]
+	do
+		echo "d none ${DIR_SYSVINIT} ? ? ?" >> ${TMP_LIST}
+		DIR_SYSVINIT=`dirname ${DIR_SYSVINIT}`
+	done
+
+	[ -d /etc/config ]  &&  {
+		echo "d none /etc ? ? ?" >> ${TMP_LIST}
+		echo "d none /etc/config ? ? ?" >> ${TMP_LIST}
+		echo "f none /etc/config/fax=../etc/config.fax 0644 @SYSUID@ @SYSGID@" >> ${TMP_LIST}
+	}
+fi
+
 # prototype file
 cat >${PROTOTYPE} <<EOF
 i copyright
@@ -92,7 +157,8 @@ sort -u ${TMP_LIST} >> ${PROTOTYPE}
 rm ${TMP_LIST}
 
 grep " none " ${PROTOTYPE}.stub >> ${PROTOTYPE}
-grep " man " ${PROTOTYPE}.stub >> ${PROTOTYPE}
+grep " man " ${PROTOTYPE}.stub | sed -e "s~\.${MANNUM1_8}=~.${LMANNUM1_8}=~" \
+	-e "s~\.${MANNUM4_5}=~.${LMANNUM4_5}=~" >> ${PROTOTYPE}
 
 if [ "@AFM@" = yes ]
 then
