@@ -1,12 +1,3 @@
-d none /etc ? ? ?
-d none @SYSVINITDIR@ ? ? ?
-f none @SYSVINITDIR@/hylafax=../etc/hylafax 0755 @SYSUID@ @SYSGID@
-d none @SYSVINITDIR@/@SYSVINITSTOPDIR@ ? ? ?
-s none @SYSVINITDIR@/@SYSVINITSTOPDIR@/@SYSVINITSTOPNAME@=@SYSVINITDIR@/hylafax
-d none @SYSVINITDIR@/@SYSVINITSTARTDIR@ ? ? ?
-s none @SYSVINITDIR@/@SYSVINITSTARTDIR@/@SYSVINITSTARTNAME@=@SYSVINITDIR@/hylafax
-d none /etc/config ? ? ?
-f none /etc/config/fax=../etc/config.fax 0644 @SYSUID@ @SYSGID@
 d none @BIN@ ? ? ?
 f none @BIN@/faxalter=../faxalter/faxalter 0755 @SYSUID@ @SYSGID@
 f none @BIN@/faxcover=../faxcover/faxcover 0755 @SYSUID@ @SYSGID@
@@ -41,57 +32,63 @@ f man @MANDIR@/man1/sendfax.1=../man/cman.apps/sendfax.1 0444 @SYSUID@ @SYSGID@
 f man @MANDIR@/man1/sendpage.1=../man/cman.apps/sendpage.1 0444 @SYSUID@ @SYSGID@
 f man @MANDIR@/man1/sgi2fax.1=../man/cman.apps/sgi2fax.1 0444 @SYSUID@ @SYSGID@
 f man @MANDIR@/man1/textfmt.1=../man/cman.apps/textfmt.1 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/choptest.1=../man/sman.apps/choptest.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/cqtest.1=../man/sman.apps/cqtest.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/dialtest.1=../man/sman.apps/dialtest.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxabort.1=../man/sman.apps/faxabort.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxaddmodem.1=../man/sman.apps/faxaddmodem.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxanswer.1=../man/sman.apps/faxanswer.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxconfig.1=../man/sman.apps/faxconfig.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxcron.1=../man/sman.apps/faxcron.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxgetty.1=../man/sman.apps/faxgetty.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxinfo.1=../man/sman.apps/faxinfo.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxmodem.1=../man/sman.apps/faxmodem.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxq.1=../man/sman.apps/faxq.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxqclean.1=../man/sman.apps/faxqclean.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxquit.1=../man/sman.apps/faxquit.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxrcvd.1=../man/sman.apps/faxrcvd.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxsend.1=../man/sman.apps/faxsend.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxsetup.1=../man/sman.apps/faxsetup.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxstate.1=../man/sman.apps/faxstate.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/faxwatch.1=../man/sman.apps/faxwatch.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/hfaxd.1=../man/sman.apps/hfaxd.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/mkcover.1=../man/sman.apps/mkcover.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/notify.1=../man/sman.apps/notify.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/pagesend.1=../man/sman.apps/pagesend.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/pollrcvd.1=../man/sman.apps/pollrcvd.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/ps2fax.1=../man/sman.apps/ps2fax.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/recvstats.1=../man/sman.apps/recvstats.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/tagtest.1=../man/sman.apps/tagtest.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/tiff2fax.1=../man/sman.apps/tiff2fax.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/tiffcheck.1=../man/sman.apps/tiffcheck.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/tsitest.1=../man/sman.apps/tsitest.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/wedged.1=../man/sman.apps/wedged.1m 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man1/xferfaxstats.1=../man/sman.apps/xferfaxstats.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/choptest.@MANNUM1_8@=../man/sman.apps/choptest.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/cqtest.@MANNUM1_8@=../man/sman.apps/cqtest.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/dialtest.@MANNUM1_8@=../man/sman.apps/dialtest.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxabort.@MANNUM1_8@=../man/sman.apps/faxabort.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxaddmodem.@MANNUM1_8@=../man/sman.apps/faxaddmodem.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxadduser.@MANNUM1_8@=../man/sman.apps/faxadduser.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxanswer.@MANNUM1_8@=../man/sman.apps/faxanswer.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxconfig.@MANNUM1_8@=../man/sman.apps/faxconfig.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxcron.@MANNUM1_8@=../man/sman.apps/faxcron.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxdeluser.@MANNUM1_8@=../man/sman.apps/faxdeluser.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxgetty.@MANNUM1_8@=../man/sman.apps/faxgetty.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxinfo.@MANNUM1_8@=../man/sman.apps/faxinfo.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxmodem.@MANNUM1_8@=../man/sman.apps/faxmodem.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxq.@MANNUM1_8@=../man/sman.apps/faxq.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxqclean.@MANNUM1_8@=../man/sman.apps/faxqclean.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxquit.@MANNUM1_8@=../man/sman.apps/faxquit.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxrcvd.@MANNUM1_8@=../man/sman.apps/faxrcvd.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxsend.@MANNUM1_8@=../man/sman.apps/faxsend.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxsetup.@MANNUM1_8@=../man/sman.apps/faxsetup.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxstate.@MANNUM1_8@=../man/sman.apps/faxstate.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/faxwatch.@MANNUM1_8@=../man/sman.apps/faxwatch.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/hfaxd.@MANNUM1_8@=../man/sman.apps/hfaxd.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/mkcover.@MANNUM1_8@=../man/sman.apps/mkcover.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/notify.@MANNUM1_8@=../man/sman.apps/notify.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/pdf2fax.@MANNUM1_8@=../man/sman.apps/pdf2fax.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/pagesend.@MANNUM1_8@=../man/sman.apps/pagesend.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/pollrcvd.@MANNUM1_8@=../man/sman.apps/pollrcvd.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/ps2fax.@MANNUM1_8@=../man/sman.apps/ps2fax.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/recvstats.@MANNUM1_8@=../man/sman.apps/recvstats.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/tagtest.@MANNUM1_8@=../man/sman.apps/tagtest.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/tiff2fax.@MANNUM1_8@=../man/sman.apps/tiff2fax.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/tiffcheck.@MANNUM1_8@=../man/sman.apps/tiffcheck.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/tsitest.@MANNUM1_8@=../man/sman.apps/tsitest.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/wedged.@MANNUM1_8@=../man/sman.apps/wedged.1m 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man1/xferfaxstats.@MANNUM1_8@=../man/sman.apps/xferfaxstats.1m 0444 @SYSUID@ @SYSGID@
 d man @MANDIR@/man4 ? ? ?
-f man @MANDIR@/man4/pagesizes.4=../man/cman.files/pagesizes.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/typerules.4=../man/cman.files/typerules.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/cid.4=../man/sman.files/cid.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/config.4=../man/sman.files/config.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/destctrls.4=../man/sman.files/destctrls.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/dialrules.4=../man/sman.files/dialrules.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/hosts.hfaxd.4=../man/sman.files/hosts.hfaxd.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/hylafax-server.4=../man/sman.files/hylafax-server.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/info.4=../man/sman.files/info.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/log.4=../man/sman.files/log.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/pagermap.4=../man/sman.files/pagermap.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/recvq.4=../man/sman.files/recvq.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/sendq.4=../man/sman.files/sendq.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/shutdown.4=../man/sman.files/shutdown.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/status.4=../man/sman.files/status.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/tsi.4=../man/sman.files/tsi.4f 0444 @SYSUID@ @SYSGID@
-f man @MANDIR@/man4/xferfaxlog.4=../man/sman.files/xferfaxlog.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/pagesizes.@MANNUM4_5@=../man/cman.files/pagesizes.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/typerules.@MANNUM4_5@=../man/cman.files/typerules.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/cid.@MANNUM4_5@=../man/sman.files/cid.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/config.@MANNUM4_5@=../man/sman.files/config.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/destctrls.@MANNUM4_5@=../man/sman.files/destctrls.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/dialrules.@MANNUM4_5@=../man/sman.files/dialrules.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/doneq.@MANNUM4_5@=../man/sman.files/doneq.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/hosts.hfaxd.@MANNUM4_5@=../man/sman.files/hosts.hfaxd.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/hylafax-server.@MANNUM4_5@=../man/sman.files/hylafax-server.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/info.@MANNUM4_5@=../man/sman.files/info.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/log.@MANNUM4_5@=../man/sman.files/log.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/pagermap.@MANNUM4_5@=../man/sman.files/pagermap.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/recvq.@MANNUM4_5@=../man/sman.files/recvq.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/sendq.@MANNUM4_5@=../man/sman.files/sendq.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/shutdown.@MANNUM4_5@=../man/sman.files/shutdown.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/status.@MANNUM4_5@=../man/sman.files/status.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/tsi.@MANNUM4_5@=../man/sman.files/tsi.4f 0444 @SYSUID@ @SYSGID@
+f man @MANDIR@/man4/xferfaxlog.@MANNUM4_5@=../man/sman.files/xferfaxlog.4f 0444 @SYSUID@ @SYSGID@
 d none @SBIN@ ? ? ?
+f none @SBIN@/faxadduser=../util/faxadduser 0755 @SYSUID@ @SYSGID@
+f none @SBIN@/faxdeluser=../util/faxdeluser 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/faxmsg=../util/faxmsg 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/faxconfig=../util/faxconfig 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/faxmodem=../util/faxmodem 0755 @SYSUID@ @SYSGID@
@@ -113,25 +110,26 @@ f none @SBIN@/tsitest=../faxd/tsitest 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/tagtest=../faxd/tagtest 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/cqtest=../faxd/cqtest 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/choptest=../faxd/choptest 0755 @SYSUID@ @SYSGID@
-f none @SBIN@/faxaddmodem=../etc/faxaddmodem 0755 @SYSUID@ @SYSGID@
-f none @SBIN@/faxsetup=../etc/faxsetup 0755 @SYSUID@ @SYSGID@
+f none @SBIN@/faxaddmodem=../etc/faxaddmodem.sh 0755 @SYSUID@ @SYSGID@
+f none @SBIN@/faxsetup=../etc/faxsetup.sh 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/faxsetup.bsdi=../@SRCDIR@/etc/faxsetup.bsdi 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/faxsetup.irix=../@SRCDIR@/etc/faxsetup.irix 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/faxsetup.linux=../@SRCDIR@/etc/faxsetup.linux 0755 @SYSUID@ @SYSGID@
 f none @SBIN@/probemodem=../etc/probemodem.sh 0755 @SYSUID@ @SYSGID@
 d none @SPOOL@ 0755 @FAXUID@ @FAXGID@
 d none @SPOOL@/bin 0755 @FAXUID@ @FAXGID@
-f none @SPOOL@/bin/ps2fax.gs=../@SRCDIR@/util/ps2fax.gs.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/ps2fax.dps=../@SRCDIR@/util/ps2fax.dps.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/ps2fax.imp=../@SRCDIR@/util/ps2fax.imp.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/pcl2fax=../@SRCDIR@/util/pcl2fax.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/tiff2fax=../@SRCDIR@/util/tiff2fax.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/notify=../@SRCDIR@/util/notify.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/pdf2fax.gs=../@SRCDIR@/util/pdf2fax.gs.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/ps2fax.gs=../util/ps2fax.gs.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/ps2fax.dps=../util/ps2fax.dps.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/ps2fax.imp=../util/ps2fax.imp.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/pcl2fax=../util/pcl2fax.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/tiff2fax=../util/tiff2fax.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/notify=../util/notify.sh 0755 @SYSUID@ @SYSGID@
 f none @SPOOL@/bin/notify.awk=../@SRCDIR@/util/notify.awk 0444 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/faxrcvd=../@SRCDIR@/util/faxrcvd.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/pollrcvd=../@SRCDIR@/util/pollrcvd.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/mkcover=../@SRCDIR@/util/mkcover.sh 0755 @SYSUID@ @SYSGID@
-f none @SPOOL@/bin/wedged=../@SRCDIR@/util/wedged.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/faxrcvd=../util/faxrcvd.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/pollrcvd=../util/pollrcvd.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/mkcover=../util/mkcover.sh 0755 @SYSUID@ @SYSGID@
+f none @SPOOL@/bin/wedged=../util/wedged.sh 0755 @SYSUID@ @SYSGID@
 d none @SPOOL@/client 0755 @FAXUID@ @FAXGID@
 d none @SPOOL@/config 0755 @FAXUID@ @FAXGID@
 f none @SPOOL@/config/class1=../@SRCDIR@/config/class1 0444 @SYSUID@ @SYSGID@
@@ -171,6 +169,7 @@ f none @SPOOL@/config/telebit-qblazer=../@SRCDIR@/config/telebit-qblazer 0444 @S
 f none @SPOOL@/config/telebit-wb=../@SRCDIR@/config/telebit-wb 0444 @SYSUID@ @SYSGID@
 f none @SPOOL@/config/tricom2842=../@SRCDIR@/config/tricom2842 0444 @SYSUID@ @SYSGID@
 f none @SPOOL@/config/uds-fastalk=../@SRCDIR@/config/uds-fastalk 0444 @SYSUID@ @SYSGID@
+f none @SPOOL@/config/umc92144=../@SRCDIR@/config/umc92144 0444 @SYSUID@ @SYSGID@
 f none @SPOOL@/config/usr-2.0=../@SRCDIR@/config/usr-2.0 0444 @SYSUID@ @SYSGID@
 f none @SPOOL@/config/usr-rts=../@SRCDIR@/config/usr-rts 0444 @SYSUID@ @SYSGID@
 f none @SPOOL@/config/usr-xon=../@SRCDIR@/config/usr-xon 0444 @SYSUID@ @SYSGID@
@@ -210,6 +209,7 @@ f html @HTMLDIR@/icons/at_work_icon.gif=../@SRCDIR@/html/icons/at_work_icon.gif 
 f html @HTMLDIR@/icons/ball_blue_icon.gif=../@SRCDIR@/html/icons/ball_blue_icon.gif 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/icons/button.excl.gif=../@SRCDIR@/html/icons/button.excl.gif 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/icons/back.gif=../@SRCDIR@/html/icons/back.gif 0444 @SYSUID@ @SYSGID@
+f html @HTMLDIR@/icons/contents.gif=../@SRCDIR@/html/icons/contents.gif 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/icons/frog.gif=../@SRCDIR@/html/icons/frog.gif 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/icons/improved.gif=../@SRCDIR@/html/icons/improved.gif 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/icons/info_icon.gif=../@SRCDIR@/html/icons/info_icon.gif 0444 @SYSUID@ @SYSGID@
@@ -249,6 +249,8 @@ f html @HTMLDIR@/Modems/ucom-traveller96.html=../@SRCDIR@/html/Modems/ucom-trave
 f html @HTMLDIR@/Modems/usr-courier.html=../@SRCDIR@/html/Modems/usr-courier.html 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/Modems/usr-sportster.html=../@SRCDIR@/html/Modems/usr-sportster.html 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/Modems/zyxel-1496.html=../@SRCDIR@/html/Modems/zyxel-1496.html 0444 @SYSUID@ @SYSGID@
+f html @HTMLDIR@/Modems/zyxel-elite.html=../@SRCDIR@/html/Modems/zyxel-elite.html 0444 @SYSUID@ @SYSGID@
+f html @HTMLDIR@/Modems/zyxel-omni.html=../@SRCDIR@/html/Modems/zyxel-omni.html 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/Modems/multitech-2834.html=../@SRCDIR@/html/Modems/multitech-2834.html 0444 @SYSUID@ @SYSGID@
 f html @HTMLDIR@/Modems/hayes-accura288.html=../@SRCDIR@/html/Modems/hayes-accura288.html 0444 @SYSUID@ @SYSGID@
 d html @HTMLDIR@/Majordomo 0755 @SYSUID@ @SYSGID@
